--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   {
     "name" : "Hayabusa Backup",
     "link" : "",
-    "image" : "",
+    "image" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/hayabusa_backup.jpg",
     "filename" : ".zip"
   }
   ]
