--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     "name" : "Hayabusa Backup",
     "link" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/Hayabusa_Epic.zip",
     "image" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/hayabusa_epic.jpg",
-    "filename" : ".zip"
+    "filename" : "Hayabusa_Epic.zip"
   }
   ]
