--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 [
   {
     "name" : "Hayabusa Epic",
+    "link" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/Hayabusa_Backup.zip",
+    "image" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/hayabusa_backup.jpg",
+    "filename" : "Hayabusa_Backup.zip"
+  },
+  {
+    "name" : "Hayabusa Epic",
     "link" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/Hayabusa_Epic.zip",
     "image" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/hayabusa_epic.jpg",
     "filename" : "Hayabusa_Epic.zip"
