--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
   {
-    "name" : "Hayabusa Epic",
+    "name" : "Hayabusa Backup",
     "link" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/Hayabusa_Backup.zip",
     "image" : "https://github.com/pinyapple1029/hayabusafiles/raw/master/hayabusa_backup.jpg",
     "filename" : "Hayabusa_Backup.zip"
